syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.ops.sc.rpc.grpc";
option java_outer_classname = "RemoteCallServiceProto";
option objc_class_prefix = "HLWS";

option java_generic_services = true;

import "callbackService.proto";


message RemoteCallRequest {
    RpcCallBackResponse rpcCallBackResponse = 1;
    string appName = 2;
    string uid = 3;

}
service RemoteCallService {
    rpc remoteCall(RemoteCallRequest) returns (RpcCallBackRequest) {}
}

